z-index solved

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
     margin-bottom: 0;
   }
   .card {
+    z-index: 10;
     color: #0e0e10;
     height: 50%;
     width: 50%;
